# ab-global-bot

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: config.py  db.py  keyboards.py  main.py  messages.py  models.py  services.py
