[tool.poetry]
name = "ab-global-bot"
version = "0.1.0"
description = ""
license = "GPL-3.0-or-later"
authors = ["Dan Sazonov <p.294803@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
